fix / spacing

--- a/apps/web/src/app.css
+++ b/apps/web/src/app.css
@@ -20,10 +20,10 @@
     --popover-foreground: oklch(0.129 0.042 264.695);
     --primary: oklch(0.208 0.042 265.755);
     --primary-foreground: oklch(0.984 0.003 247.858);
-    --secondary: oklch(0.968 0.007 247.896);
-    --secondary-foreground: oklch(0.208 0.042 265.755);
-    --muted: oklch(0.968 0.007 247.896);
-    --muted-foreground: oklch(0.554 0.046 257.417);
+    --secondary: oklch(0.8941 0.0034 207.92);
+    --secondary-foreground: oklch(0.5579 0.0161 196.7);
+    --muted: oklch(0.939 0.002 247.845);
+    --muted-foreground: oklch(0.675 0.012 196.88);
     --accent: oklch(0.968 0.007 247.896);
     --accent-foreground: oklch(0.208 0.042 265.755);
     --destructive: oklch(0.577 0.245 27.325);
@@ -56,10 +56,10 @@
     --popover-foreground: oklch(0.984 0.003 247.858);
     --primary: oklch(0.929 0.013 255.508);
     --primary-foreground: oklch(0.208 0.042 265.755);
-    --secondary: oklch(0.279 0.041 260.031);
-    --secondary-foreground: oklch(0.984 0.003 247.858);
-    --muted: oklch(0.279 0.041 260.031);
-    --muted-foreground: oklch(0.704 0.04 256.788);
+    --secondary: oklch(0.358 0.0094 196.74);
+    --secondary-foreground: oklch(0.8019 0.007 200.78);
+    --muted: oklch(0.357 0.001 196.74);
+    --muted-foreground: oklch(0.770 0.008 196.99);
     --accent: oklch(0.279 0.041 260.031);
     --accent-foreground: oklch(0.984 0.003 247.858);
     --destructive: oklch(0.704 0.191 22.216);
